--- a/MACASLING BSCS-1.html
+++ b/MACASLING BSCS-1.html
@@ -206,7 +206,7 @@
 	    <p><span>Sto. Niño, Elementary School</span></p>
 	<h3>Secondary:</h3>
             <p><span>Bacong National High School, Bacong Salug,Zamboanga Del Norte</span></p>
-            <li><span>Studied - AGRI-CROP PRODUCTION<span>>
+            <li><span>Studied - AGRI-CROP PRODUCTION<span>
 	    <p><span>Bacong Señior High School, Bacong Salug,Zamboanga Del Norte</span></p>
         <li>Studied - HUMANITIES AND SOCIAL SCIENCES</li>
         <h3>Tertiary</h3>
